nimnuklear/src/nuklear.h


struct nk_context;

struct nk_vec2 {float x,y;};

struct nk_rect {float x,y,w,h;};

enum nk_buttons {
    NK_BUTTON_LEFT,
    NK_BUTTON_MIDDLE,
    NK_BUTTON_RIGHT,
    NK_BUTTON_DOUBLE,
    NK_BUTTON_MAX
};

/* =============================================================================
 *
 *                                  WIDGET
 *
 * ============================================================================= */
enum nk_widget_layout_states {
    NK_WIDGET_INVALID, /* The widget cannot be seen and is completely out of view */
    NK_WIDGET_VALID, /* The widget is completely inside the window and can be updated and drawn */
    NK_WIDGET_ROM /* The widget is partially visible and cannot be updated */
};

NK_API enum nk_widget_layout_states nk_widget(struct nk_rect*, const struct nk_context*);

NK_API enum nk_widget_layout_states nk_widget_fitting(struct nk_rect*, struct nk_context*, struct nk_vec2);

NK_API struct nk_rect nk_widget_bounds(struct nk_context*);

NK_API struct nk_vec2 nk_widget_position(struct nk_context*);

NK_API struct nk_vec2 nk_widget_size(struct nk_context*);

NK_API float nk_widget_width(struct nk_context*);

NK_API float nk_widget_height(struct nk_context*);

NK_API int nk_widget_is_hovered(struct nk_context*);

NK_API int nk_widget_is_mouse_clicked(struct nk_context*, enum nk_buttons);

NK_API int nk_widget_has_mouse_click_down(struct nk_context*, enum nk_buttons, int down);

NK_API void nk_spacing(struct nk_context*, int cols);


struct nk_context {
/* public: can be accessed freely */
    struct nk_input input;
    struct nk_style style;
    struct nk_buffer memory;
    struct nk_clipboard clip;
    nk_flags last_widget_state;
    enum nk_button_behavior button_behavior;
    struct nk_configuration_stacks stacks;
    float delta_time_seconds;

/* private:
    should only be accessed if you
    know what you are doing */
#ifdef NK_INCLUDE_VERTEX_BUFFER_OUTPUT
    struct nk_draw_list draw_list;
#endif
#ifdef NK_INCLUDE_COMMAND_USERDATA
    nk_handle userdata;
#endif
    /* text editor objects are quite big because of an internal
     * undo/redo stack. Therefore it does not make sense to have one for
     * each window for temporary use cases, so I only provide *one* instance
     * for all windows. This works because the content is cleared anyway */
    struct nk_text_edit text_edit;
    /* draw buffer used for overlay drawing operation like cursor */
    struct nk_command_buffer overlay;

    /* windows */
    int build;
    int use_pool;
    struct nk_pool pool;
    struct nk_window *begin;
    struct nk_window *end;
    struct nk_window *active;
    struct nk_window *current;
    struct nk_page_element *freelist;
    unsigned int count;
    unsigned int seq;
};