demo/sdl_opengl3/nimnuklear/nuklear.nim


type
  widget_states* {.size: sizeof(cint).} = enum
    WIDGET_STATE_MODIFIED = (1 shl (1)), WIDGET_STATE_INACTIVE = (1 shl (2)),
    WIDGET_STATE_ENTERED = (1 shl (3)), WIDGET_STATE_HOVER = (1 shl (4)),
    WIDGET_STATE_ACTIVED = (1 shl (5)), WIDGET_STATE_LEFT = (1 shl (6)),




proc widget*(a2: ptr rect; a3: ptr context): widget_layout_states {.cdecl,
    importc: "nk_widget", header: headernuklear.}
proc widget_fitting*(a2: ptr rect; a3: ptr context; a4: vec2): widget_layout_states {.
    cdecl, importc: "nk_widget_fitting", header: headernuklear.}
proc widget_bounds*(a2: ptr context): rect {.cdecl, importc: "nk_widget_bounds",
                                        header: headernuklear.}
proc widget_position*(a2: ptr context): vec2 {.cdecl, importc: "nk_widget_position",
    header: headernuklear.}
proc widget_size*(a2: ptr context): vec2 {.cdecl, importc: "nk_widget_size",
                                      header: headernuklear.}
proc widget_width*(a2: ptr context): cfloat {.cdecl, importc: "nk_widget_width",
    header: headernuklear.}
proc widget_height*(a2: ptr context): cfloat {.cdecl, importc: "nk_widget_height",
    header: headernuklear.}
proc widget_is_hovered*(a2: ptr context): cint {.cdecl,
    importc: "nk_widget_is_hovered", header: headernuklear.}
proc widget_is_mouse_clicked*(a2: ptr context; a3: buttons): cint {.cdecl,
    importc: "nk_widget_is_mouse_clicked", header: headernuklear.}
proc widget_has_mouse_click_down*(a2: ptr context; a3: buttons; down: cint): cint {.
    cdecl, importc: "nk_widget_has_mouse_click_down", header: headernuklear.}
proc spacing*(a2: ptr context; cols: cint) {.cdecl, importc: "nk_spacing",
                                       header: headernuklear.}
type
  text_align* {.size: sizeof(cint).} = enum
    TEXT_ALIGN_LEFT = 0x00000001, TEXT_ALIGN_CENTERED = 0x00000002,
    TEXT_ALIGN_RIGHT = 0x00000004, TEXT_ALIGN_TOP = 0x00000008,
    TEXT_ALIGN_MIDDLE = 0x00000010, TEXT_ALIGN_BOTTOM = 0x00000020


type
  text_alignment* {.size: sizeof(cint).} = enum
    TEXT_LEFT = TEXT_ALIGN_MIDDLE.int32 or TEXT_ALIGN_LEFT.int32
    TEXT_CENTERED = TEXT_ALIGN_MIDDLE.int32 or TEXT_ALIGN_CENTERED.int32
    TEXT_RIGHT = TEXT_ALIGN_MIDDLE.int32 or TEXT_ALIGN_RIGHT.int32

